src/objects/Game_Round__c.object
<CustomObject>
    <fields>
        <fullName>Fruit_Stand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fruit Stand</label>
        <referenceTo>Fruit_Stand__c</referenceTo>
        <relationshipLabel>Game Rounds</relationshipLabel>
        <relationshipName>Game_Rounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Highest_Price_Fruit__c</fullName>
        <label>Highest Price Fruit</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Price__c</fullName>
        <label>Highest Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lowest_Price_Fruit__c</fullName>
        <label>Lowest Price Fruit</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowest_Price__c</fullName>
        <label>Lowest Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Round_Number__c</fullName>
        <label>Round Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Game Round</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>round {0} {MMYY}</displayFormat>
        <label>Game Round Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Rounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>